# Letnaya_practica4

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
cmake/: MyFunctions.cmake
lib/: CMakeLists.txt
lib/include/: large_blocks.h
lib/src/: large_blocks.c
